<resources>
    <!-- Common Strings-->
    <string name="title_alert">提示</string>
    <!--Message Dialog-->
    <string name="nfc_none">系统检测到您手机不支持NFC！</string>
    <string name="nfc_unable">您的NFC未开启,请先开启！</string>
    <string name="nfc_wifi">您的设备未连入wifi,请按确定连接！</string>
    <string name="nfc_wifi2">设备只能在wifi --jsb50-- 下使用!</string>
    <!-- LoginActivity Strings-->
    <string name="copyright">广州图创计算机软件开发有限公司</string>
    <string name="tipstitle">温馨提示：</string>
    <string name="tips">1.请输入读者卡背面13位证号;\r\n2.初始密码为读者出生年月日，共8位数，如：19981203;\r\n3.如有其他疑问，请到图书馆总服务台处咨询。</string>


    <!--<string name="app_name">手机借书</string>-->


    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="loadbook_fail">借书失败</string>
    <string name="loadbook_success">借书成功</string>
    <string name="loadbook_own">图书已借</string>
    <string name="loadbook_renew">续借成功</string>
    <!-- homeFragment -->
    <string name="Home_TitleName">我要借书</string>

    <!-- scanActivity-->
    <string name="insert_read_dialog">请扫描读者证录入读者证信息</string>
    <!-- common-->
    <string name="scanbook_operaTV">请把手机贴近图书</string>
    <string name="loanbook">借书</string>
    <string name="returnbook">还书</string>
    <string name="renewbook">续借</string>
    <string name="ownbook">已借图书</string>
    <string name="shelvesbook">书本上架</string>
    <string name="checkbook">书本清点</string>
    <string name="alongbook">书本顺架</string>
    <string name="previewbook">书本阅览</string>
    <string name="purchasebook">书本采购</string>

    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">57987c22</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”…</string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t有什么好吃的?\n\t上海外滩有哪些酒店?\n\n\t更多语义请登录：\n\thttp://osp.voicecloud.cn/ \n\t配置您的专属语义吧!</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>

    <!-- 合成 -->
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>
    <string-array name="emot_values">
        <item>neutral</item>
        <item>happy</item>
        <item>sad</item>
        <item>angry</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>
    <!-- 语音评测 -->
    <string name="text_en_word">"[word]\napple\nbanana\norange"</string>
    <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
    <string name="text_cn_syllable">"知，痴，是"</string>
    <string name="text_cn_word">"磁铁，率领，脆弱，动手，古筝"</string>
    <string name="text_cn_sentence">"一座座雪峰插入云霄，峰顶银光闪闪，大大小小的湖泊，像颗颗宝石镶嵌在彩带般的沟谷中。"</string>
    <string-array name="ise_language_entries">
        <item>英语</item>
        <item>汉语</item>
    </string-array>
    <string-array name="ise_language_values">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>
    <string-array name="category_entries">
        <item>单字</item>
        <item>词语</item>
        <item>句子</item>
    </string-array>
    <string-array name="category_values">
        <item>read_syllable</item>
        <item>read_word</item>
        <item>read_sentence</item>
    </string-array>
    <string-array name="result_level_entries">
        <item>plain</item>
        <item>complete</item>
    </string-array>
    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>


    <!-- 搜索框-->
    <string name="hint">Search</string>
    <string name="speech_prompt">Say Something</string>
    <string name="speech_not_supported">speech to text doesn\'t seems supported</string>
    <string name="menu.clear">clear</string>
    <string name="menu.tts">text to speech</string>
    <string name="menu.toggle.icon">Icon Visible</string>
    <string name="menu.icon.type">Icon Type</string>


    <!-- 下拉刷新-->
    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>

    <!-- choice dialog-->
    <string name="purchase_action">订购操作</string>
    <string name="purchase_update">修改</string>
    <string name="purchase_add">追加</string>
    <string name="purchase_cancle">取消</string>
</resources>
