<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="10.0dip" 
    >
	<com.dd.ShadowLayout
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:sl_cornerRadius="5dp"
            app:sl_dx="1dp"
            app:sl_dy="1dp"
            app:sl_shadowColor="@color/shadow">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/choice_dialog_background"
        >

        <RelativeLayout
            android:id="@+id/tv_title_activity"
            android:layout_width="fill_parent"
        	android:layout_height="60.0dip"
        	android:background="@drawable/choice_dialog_title">

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_clear"
                android:background="@drawable/cancel_bg"/>

            <TextView
            	android:id="@+id/title_textview"
            	style="@style/text_18_666666"
            	android:gravity="center"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/purchase_action"
            />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="#999"/>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/positiveButton"
                    android:textSize="18sp"
                    android:textColor="@color/reload_text"
                    android:gravity="center"
                    android:background="@drawable/choice_dialog_leftconner"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/purchase_update"/>
                <View
                    android:layout_width="0.01dp"
                    android:layout_height="match_parent"
                    android:background="#999"/>
                <TextView
                    android:id="@+id/negativeButton"
                    android:textSize="18sp"
                    android:textColor="@color/reload_text"
                    android:gravity="center"
                    android:background="@drawable/choice_dialog_center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/purchase_update"/>
                <View
                    android:layout_width="0.01dp"
                    android:layout_height="match_parent"
                    android:background="#999"/>
                <TextView
                    android:id="@+id/cancleButton"
                    android:textSize="18sp"
                    android:textColor="@color/reload_text"
                    android:gravity="center"
                    android:background="@drawable/choice_dialog_rightconner"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/purchase_cancle"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</com.dd.ShadowLayout>
</FrameLayout>