<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical" >

    <include layout="@layout/activity_title" />

    <LinearLayout
        android:layout_below="@+id/ly_main_tab_bottom"
        android:layout_above="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout

        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/logoIcon"
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"

            />
        <TextView
            android:id="@+id/logoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/loginBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/loginshape"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/user_icon"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:background="@null"
                    android:hint="请输入帐号"
                    android:singleLine="true"
                    android:textColor="#333"
                    android:textSize="14dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.01dip"
                android:background="#999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/locked"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:background="@null"
                    android:hint="请输入密码"
                    android:imeOptions="actionDone"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#333"
                    android:textSize="14dp" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/rempass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="3dip"
                style="@style/CustomCheckboxTheme"
                android:text="记住密码"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:orientation="vertical" >

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_ok_selector"
            android:text="登录"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tipstitle"
            android:textColor="#bfe5ff"
            android:textSize="16dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/tips"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="#bfe5ff"
            android:textSize="12dip" />
    </LinearLayout>

    <ImageView
        android:id="@+id/animationIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name" />
</RelativeLayout>